...
export const NavBar = ({ nav, title, action, onPress, testID }) => {
  return (
    <Container>
      <Bar>
        <Back>
          <Btn.BtnCircle
            testID={testID || 'back-button'}
            iconName="chevron-left"
            size={30}
            onPress={onPress}
          />
        </Back>
        {title ? <Title>{title}</Title> : <Title></Title>}
...
export const NavBarChat = ({ nav, avatar, placeholder, name, onPress, testID }) => {
  return (
    <Container >
      <OtherUserInfo>
        <View style={{ left: 10 }}>
          <Btn.BtnCircle
            testID={testID || 'back-button4'}
            iconName={nav}
            color={'white'}
            size={30}
            onPress={onPress}
          />
        </View>
...
